--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ p img {
   text-indent: -9999px;
   height: 30px;
   width: 176px;
-  background: transparent url(../img/logo.jpg) no-repeat left top;
+  background: transparent url(../img/logo.png) no-repeat left top;
   background-size: cover;
   margin-top: 10px;
 }
