--- a/css/main.css
+++ b/css/main.css
@@ -63,3 +63,61 @@ ul li {
 #download_button {
   display: none;
 }
+
+/*Social Icons*/
+.social-icons {
+  margin:0;
+  padding:0;
+  text-align: center;
+}
+.social-icons li {
+  display:inline-block;
+  list-style:none;
+  margin-bottom:5px !important;
+  text-indent:-9999px;
+}
+.social-icons li a, a.social-icon {
+  width:28px;
+  height:28px;
+  display:block;
+  background-position:0 0;
+  background-repeat:no-repeat;
+  transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+}
+.social-icons li:hover a {
+  background-position:0 -38px;
+}
+
+.social_amazon {background: url(../img/social/amazon.png) no-repeat;}
+.social_behance {background: url(../img/social/behance.png) no-repeat;}
+.social_blogger {background: url(../img/social/blogger.png) no-repeat;}
+.social_deviantart {background: url(../img/social/deviantart.png) no-repeat;}
+.social_dribbble {background: url(../img/social/dribbble.png) no-repeat;}
+.social_dropbox {background: url(../img/social/dropbox.png) no-repeat;}
+.social_evernote {background: url(../img/social/evernote.png) no-repeat;}
+.social_facebook {background: url(../img/social/facebook.png) no-repeat;}
+.social_forrst {background: url(../img/social/forrst.png) no-repeat;}
+.social_github {background: url(../img/social/github.png) no-repeat;}
+.social_googleplus {background: url(../img/social/googleplus.png) no-repeat;}
+.social_instagram {background: url(../img/social/instagram.png) no-repeat;}
+.social_jolicloud {background: url(../img/social/jolicloud.png) no-repeat;}
+.social_last-fm {background: url(../img/social/last-fm.png) no-repeat;}
+.social_linkedin {background: url(../img/social/linkedin.png) no-repeat;}
+.social_picasa {background: url(../img/social/picasa.png) no-repeat;}
+.social_pintrest {background: url(../img/social/pintrest.png) no-repeat;}
+.social_rss {background: url(../img/social/rss.png) no-repeat;}
+.social_skype {background: url(../img/social/skype.png) no-repeat;}
+.social_slideshare {background: url(../img/social/slideshare.png) no-repeat;}
+.social_spotify {background: url(../img/social/spotify.png) no-repeat;}
+.social_stumbleupon {background: url(../img/social/stumbleupon.png) no-repeat;}
+.social_tumblr {background: url(../img/social/tumblr.png) no-repeat;}
+.social_twitter {background: url(../img/social/twitter.png) no-repeat;}
+.social_vimeo {background: url(../img/social/vimeo.png) no-repeat;}
+.social_wordpress {background: url(../img/social/wordpress.png) no-repeat;}
+.social_xing {background: url(../img/social/xing.png) no-repeat;}
+.social_yahoo {background: url(../img/social/yahoo.png) no-repeat;}
+.social_youtube {background: url(../img/social/youtube.png) no-repeat;}
